2006-08-24  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Application switcher menu in thumb mode does not show the
	second line for Home." (Closes NB#37012)
	* hildon-navigator/hn-app-switcher.c: Add Home as a new type of
	  InfoEntry to the AS menu

2006-08-24  Johan Bilien <johan.bilien@nokia.com>

	Applied further fix to "HOME: Discard layout -confirmation note shown even
	though there wasn't any changes" (Closes NB#27713)
	* hildon-home/layout-manager.c: Set state to having changed if an
	  applet is closed from its close button 

2006-08-24  Johan Bilien <johan.bilien@nokia.com>

    Applied fix to "Home layout is not considered changed when applets are
	only resized." (Closes NB#38190)
	* hildon-home/layout-manager.c: Set the state to having changed as soon
      as an applet is moved

2006-08-24  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Application close button is missing for Application
	switcher menu in thumb mode" (Closes NB#37008)
	* hildon-navigator/hn-app-menu-item.c: change the icon size instead
	  of the icon name for thumbable close icon

2006-08-24  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/others-menu.{c,h}: Use dngettext for the
	  second line of folders' L10n (Closes NB#37517)

2006-08-23  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.9.22

2006-08-22  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "AF-BAT:Device crashes on a long press on the Home key
	after closing the application in the foreground." (Closes NB#38461)
	* hildon-navigator/hn-wm.{c,h}: Add hn_wm_get_last_active_window()
	* hildon-navigator/hn-wm-watched-window.c: Reset last_window when the
	  last_window is destroyed

2006-08-22  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Extension button is not showing next row." (Closes NB#36908)
	* hildon-status-bar/hildon-status-bar-main.c: fixed bug in plugin
	  placement in the status bar panel

2006-08-22  Karoliina Salminen <karoliina.t.salminen@nokia.com>
